adding the navigation html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 
 <body>
+    <header class="main-head">
+        <nav>
+            <h1>Uncle Sushi</h1>
+            <ul class="nav-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">Location</a></li>
+            </ul>
+        </nav>
+    </header>
 
 </body>
 
