finished styling the navigation bar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <header class="main-head">
         <nav>
-            <h1>Uncle Sushi</h1>
+            <div class="logo">
+                <img src="./images/uncle_sushi3.png" alt="">
+            </div>
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
