finished styling the hero section with the video. also adding the html content for the welcome section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
         </nav>
     </header>
 
+    <section class="hero">
+        <div class="video-container">
+            <div class="overlay"></div>
+            <video class="video-wrapper" autoplay loop muted>
+                <source src="./videos/video.mp4">
+            </video>
+        </div>
+    </section>
+
+    <section class="welcome">
+        <h1>Welcome to Uncle Sushi & Grill</h1>
+        <p>Stop by for lunch, dinner or even a snack! We are the little sushi shop that packs vibrant flavors into every
+            bite. Here, you will find fresh seafood and creative sushi rolls that can't be found anywhere else! Our
+            prices beat any other sushi bar you will visit in Rhode Island! This is Uncle's promise to you! If we don't
+            have what you're looking for let us know and we will cater to your sushi craving! Come alone, come with
+            friends, bring a bottle and we'll provide the glass.</p>
+    </section>
+
 </body>
 
 </html>
