finished the welcome section

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <img src="./images/uncle_sushi3.png" alt="">
             </div>
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Menu</a></li>
-                <li><a href="#">Location</a></li>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">MENU</a></li>
+                <li><a href="#">LOCATION</a></li>
             </ul>
         </nav>
     </header>
@@ -32,12 +32,11 @@
     </section>
 
     <section class="welcome">
-        <h1>Welcome to Uncle Sushi & Grill</h1>
-        <p>Stop by for lunch, dinner or even a snack! We are the little sushi shop that packs vibrant flavors into every
-            bite. Here, you will find fresh seafood and creative sushi rolls that can't be found anywhere else! Our
-            prices beat any other sushi bar you will visit in Rhode Island! This is Uncle's promise to you! If we don't
-            have what you're looking for let us know and we will cater to your sushi craving! Come alone, come with
-            friends, bring a bottle and we'll provide the glass.</p>
+        <div class="welcome-text">
+            <h1>Welcome to Uncle Sushi & Grill</h1>
+            <p>Stop by for lunch, dinner or even a snack! We are the little sushi shop that packs vibrant flavors into
+                every bite.</p>
+        </div>
     </section>
 
 </body>
