finished the gallery section and the footer section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,66 @@
         </div>
     </section>
 
+    <section class="gallery-section">
+        <div class="gallery">
+            <div class="gallery-image1">
+                <img class="image-1" src="https://images.unsplash.com/photo-1584583570840-0a3d88497593" alt="">
+            </div>
+            <div class="gallery-image1">
+                <img class="image-1" src="https://images.unsplash.com/photo-1579871494447-9811cf80d66c" alt="">
+            </div>
+            <div class="gallery-image1">
+                <img class="image-1" src="https://images.unsplash.com/photo-1582450871972-ab5ca641643d" alt="">
+            </div>
+            <div class="gallery-image1">
+                <img class="image-1" src="https://images.unsplash.com/photo-1580821082847-c53037ecfe0a" alt="">
+            </div>
+            <div class="gallery-image1">
+                <img class="image-1"
+                    src="https://images.unsplash.com/photo-1562802378-063ec186a863?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
+                    alt="">
+            </div>
+            <div class="gallery-image1">
+                <img class="image-1"
+                    src="https://images.unsplash.com/photo-1563612116828-a62f45c706e4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=971&q=80"
+                    alt="">
+            </div>
+            <div class="gallery-image1">
+                <img class="image-1"
+                    src="https://images.unsplash.com/photo-1559410545-0bdcd187e0a6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80"
+                    alt="">
+            </div>
+            <div class="gallery-image1">
+                <img class="image-1"
+                    src="https://images.unsplash.com/photo-1562802418-f06596aad443?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
+                    alt="">
+            </div>
+            <div class="gallery-image1">
+                <img class="image-1"
+                    src="https://images.unsplash.com/photo-1583571559979-8d44df75cbba?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80"
+                    alt="">
+            </div>
+            <div class="gallery-image1">
+                <img class="image-1"
+                    src="https://images.unsplash.com/photo-1583843870264-11917bb96aaf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1934&q=80"
+                    alt="">
+            </div>
+            <div class="gallery-image1">
+                <img class="image-1"
+                    src="https://images.unsplash.com/photo-1553701275-1d6118df60bf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1847&q=80"
+                    alt="">
+            </div>
+            <div class="gallery-image1">
+                <img class="image-1"
+                    src="https://images.unsplash.com/photo-1563612116891-9b03e4bb9318?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=951&q=80"
+                    alt="">
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <h1>Copyright &copy; 2011 - 2018</h1>
+    </footer>
 </body>
 
 </html>
